# Orbis

./: .gitignore  README.md
architecture/: default.nix
architecture/src/: architecture.tex
hs2halo2/: hs2halo2.cabal
hs2halo2/src/Halo2/: Prelude.hs  Types.hs
hs2halo2/src/Halo2/Types/: Circuit.hs  CircuitConfig.hs  Coefficient.hs  ColumnIndex.hs  ColumnType.hs  ColumnTypes.hs  EqualityConstrainableColumns.hs  EqualityConstraint.hs  EqualityConstraints.hs  Exponent.hs  FieldElement.hs  FiniteField.hs  FixedVariableValues.hs  InputExpression.hs  LookupArgument.hs  LookupArguments.hs  Monomial.hs  Polynomial.hs  PolynomialConstraints.hs  PolynomialDegreeBound.hs  PolynomialVariable.hs  PowerProduct.hs  RowCount.hs  RowIndex.hs  TableColumn.hs
specs/off-chain-tx-pricing/: default.nix
specs/off-chain-tx-pricing/src/: off-chain-pricing.tex
specs/on-chain-tx-pricing/: default.nix
specs/on-chain-tx-pricing/src/: on-chain-pricing.tex
specs/uplc2c/: default.nix
specs/uplc2c/src/: uplc2c-architecture.tex
uplc2c/compiler/: flake.nix  uplc2c.cabal
uplc2c/compiler/exe/: Main.hs
uplc2c/compiler/src/UPLC2C/: Command.hs  Compile.hs  CompileFunctionDefinition.hs  Prelude.hs  TermToCProgram.hs  Types.hs
uplc2c/compiler/src/UPLC2C/Types/: CCode.hs  CFunctionDefinition.hs  CName.hs  CProgram.hs  CProgramBuilder.hs  CProgramBuilderT.hs  DeBruijnIndex.hs  InputFilePath.hs  OutputFilePath.hs  UPLCTerm.hs
uplc2c/rts/: NOTICE  rts.c  rts.h
