cabal-version:      2.4
name:               hs2halo2
version:            0.1.0.0
license: NONE
license-files: LICENSE
author:        Ardana Labs
maintainer:    morgan.thomas@platonic.systems


library
  exposed-modules:
    Halo2.Prelude
    Halo2.Types
    Halo2.Types.Circuit
    Halo2.Types.CircuitConfig
    Halo2.Types.Coefficient
    Halo2.Types.ColumnType
    Halo2.Types.ColumnIndex
    Halo2.Types.ColumnTypes
    Halo2.Types.EqualityConstrainableColumns
    Halo2.Types.EqualityConstraint
    Halo2.Types.EqualityConstraints
    Halo2.Types.Exponent
    Halo2.Types.FieldElement
    Halo2.Types.FiniteField
    Halo2.Types.FixedVariableValues
    Halo2.Types.InputExpression
    Halo2.Types.LookupArgument
    Halo2.Types.LookupArguments
    Halo2.Types.Monomial
    Halo2.Types.Polynomial
    Halo2.Types.PolynomialConstraints
    Halo2.Types.PolynomialDegreeBound
    Halo2.Types.PolynomialVariable
    Halo2.Types.PowerProduct
    Halo2.Types.RowIndex
    Halo2.Types.RowCount
    Halo2.Types.TableColumn

  build-depends:
    base >= 4.9 && < 5,
    aeson,
    bytestring,
    containers,
    either,
    extra,
    generic-lens,
    ghc-prim,
    hedgehog -any,
    lens,
    text -any,
    mtl

  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options:
          -Wall -Werror -Wcompat -fwarn-redundant-constraints -fwarn-incomplete-uni-patterns
          -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-identities -Wmissing-export-lists
